# blvm-node

./: .gitignore  ADVANCED_INDEXING_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_ESTIMATE.md  COVERAGE_IMPLEMENTATION.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_PLAN_VALIDATION.md  COVERAGE_STRATEGY.md  COVERAGE_WORKFLOW_ARCHITECTURE.md  Cargo.toml  ERLAY_BUILD_NOTES.md  INDEXING_OPTIMIZATIONS.md  LLVM_COV_MIGRATION.md  MAINNET_IBD_QUICKSTART.md  MEMPOOL_RPC_MODERN_API_PLAN.md  README.md  ROCKSDB_IMPLEMENTATION_NOTES.md  ROCKSDB_IMPLEMENTATION_SUMMARY.md  SECURITY.md  audit.toml  build.rs  clippy.toml  direct-consensus-allowlist.txt  mainnet-ibd-config.toml  rustfmt.toml  start-mainnet-ibd.sh  start-testnet-ibd.sh  testnet-ibd-config.toml
.cargo/: audit.toml  config.toml
benches/: compact_blocks.rs  dandelion_bench.rs  storage_operations.rs  transport_comparison.rs
docs/: ADDITIONAL_SECURITY_IMPROVEMENTS.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DANDELION_SPEC.md  DATABASE_BACKEND_PARITY.md  EVENT_SYSTEM_INTEGRATION.md  FORK_CHOICE_AND_REORG.md  HIGH_AVAILABILITY.md  IBD_BANDWIDTH_EXHAUSTION_ANALYSIS.md  IBD_PROTECTION_COMPLETE.md  IBD_PROTECTION_IMPLEMENTATION_STATUS.md  IBD_PROTECTION_SUMMARY.md  IBD_TESTING_GUIDE.md  INTEGRATION_GUIDE.md  JANITORIAL_EVENTS.md  MAINNET_SYNC_GUIDE.md  MEMPOOL_POLICIES.md  MODULE_EVENT_CONSISTENCY.md  MODULE_INTEGRATION.md  MODULE_SYSTEM.md  NETWORK_VERIFICATION.md  PLAN_VALIDATION_REPORT.md  QUIC_RPC.md  QUINN_INTEGRATION.md  (+8 more)
examples/simple-module/: Cargo.toml  README.md  module.toml
examples/simple-module/src/: main.rs
(+649 files in other folders)
