[package]
name = "simple-module"
version = "0.1.0"
edition = "2021"
authors = ["BTCDecoded Team"]

[dependencies]
# Requires redb (storage) + production (blvm_consensus) + utxo-commitments for blvm-node to compile
blvm-node = { path = "../..", default-features = false, features = ["redb", "production", "utxo-commitments"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"

[profile.release]
opt-level = 3

